samples/shrubbery/examples/failing/commaBadIndentNewline.shrub
foo (x :: Int
,y :: Bool)
